# OpenCoreSDK

./: .gitignore  README.md  build.gradle  jitpack.yml  settings.gradle
OpenCoreSDK/: build.gradle
OpenCoreSDK/src/main/: AndroidManifest.xml
OpenCoreSDK/src/main/cpp/: CMakeLists.txt
OpenCoreSDK/src/test/java/penguin/opencore/sdk/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/penguin/opencore/sdk/: ExampleInstrumentedTest.java
app/src/androidTest/java/penguin/opencore/tester/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencore.cpp  opencore.h
app/src/main/cpp/EAJNI/include/eajnis/: Log.h  Thread.h
app/src/main/cpp/arm/: opencore_impl.cpp  opencore_impl.h
app/src/main/cpp/arm64/: opencore_impl.cpp  opencore_impl.h
app/src/main/java/penguin/opencore/sdk/: Coredump.java
app/src/main/java/penguin/opencore/tester/: LeakMemory.java  MainActivity.java  TesterApp.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/penguin/opencore/sdk/: ExampleUnitTest.java
app/src/test/java/penguin/opencore/tester/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencore/: build.gradle
opencore/src/androidTest/java/penguin/opencore/sdk/: ExampleInstrumentedTest.java
opencore/src/main/cpp/: CMakeLists.txt  VERSION  opencore.cpp  opencore.h  opencore_jni.cpp
opencore/src/main/cpp/EAJNI/: Log.cpp
opencore/src/main/cpp/EAJNI/include/eajnis/: AndroidJNI.h
opencore/src/main/cpp/arm/: opencore_impl.cpp  opencore_impl.h
opencore/src/main/cpp/arm64/: opencore_impl.cpp  opencore_impl.h
opencore/src/main/cpp/eajni/: AndroidJNI.cpp  Thread.cpp
opencore/src/main/cpp/eajni/include/eajnis/: AndroidJNI.h  Log.h  Thread.h
opencore/src/main/cpp/opencore/: opencore.cpp  opencore.h
opencore/src/main/cpp/opencore/arm/: opencore.cpp  opencore.h
opencore/src/main/cpp/opencore/arm64/: opencore.cpp  opencore.h
opencore/src/main/cpp/opencore/lp32/: opencore.cpp  opencore.h
opencore/src/main/cpp/opencore/lp64/: opencore.cpp  opencore.h
opencore/src/main/cpp/opencore/riscv64/: opencore.cpp  opencore.h
opencore/src/main/cpp/opencore/x86/: opencore.cpp  opencore.h
opencore/src/main/cpp/opencore/x86_64/: opencore.cpp  opencore.h
opencore/src/main/cpp/x86/: opencore_impl.cpp  opencore_impl.h
opencore/src/main/cpp/x86_64/: opencore_impl.cpp  opencore_impl.h
opencore/src/main/java/penguin/opencore/sdk/: Coredump.java
script/: build.sh  build_opencore.sh
